--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
 </head>
 <body>
     <h2>Time Crystals 2025 <br>Registration Form</h2>
-    <form action="action.php" method="post">
+    <form name="gform" id="gform" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLSfNVbCGCUImTxlBhti-AgdKd8QISTlqjuNzTBtljHDSB1FSAA/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
         <label for="First name">Name:</label><br>
-        <input type="text" id="name" name="name" required><br><br>
+        <input type="text" id="entry.1781870168" name="entry.1781870168" required><br><br>
         
         <label for="email">Email:</label><br>
-        <input type="email" id="email" name="email" required><br><br>
+        <input type="email" id="entry.1241471767" name="entry.1241471767" required><br><br>
 
         <input type="submit" value="Register">
     </form>
+
+    <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
 </body> 
