--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Registration Form</title>
 </head>
 <body>
-    <h2>Time Crystals 2025 <br>Registration Form!</h2>
+    <h2>Time Crystals 2025 <br>Registration Form!!</h2>
     <form name="gform" id="gform" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLSfNVbCGCUImTxlBhti-AgdKd8QISTlqjuNzTBtljHDSB1FSAA/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
         <label for="First name">Name:</label><br>
         <input type="text" id="entry.1781870168" name="entry.1781870168" required><br><br>
@@ -23,6 +23,6 @@
     $('#gform').on('submit', function(e) {
     $('#gform *').fadeOut(2000);
     $('#gform').prepend('Your submission has been processed...');
-    );
+    });
     </script>
 </body> 
