--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Registration Form</title>
 </head>
 <body>
-    <h2>Time Crystals 2025 <br>Registration Form!</h2>
-    <form name="gform" id="gform" enctype="text/plain" action="https://docs.google.com/forms/d/1FAIpQLSfNVbCGCUImTxlBhti-AgdKd8QISTlqjuNzTBtljHDSB1FSAA/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
+    <h2>Time Crystals 2025 <br>Registration Form!!</h2>
+    <form name="gform" id="gform" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLSfNVbCGCUImTxlBhti-AgdKd8QISTlqjuNzTBtljHDSB1FSAA/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
         <label for="First name">Name:</label><br>
         <input type="text" id="entry.1781870168" name="entry.1781870168" required><br><br>
         
