--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <label for="email">Email:</label><br>
         <input type="email" id="entry.1241471767" name="entry.1241471767" required><br><br>
 
+        <label for="file">Abstract</label>
+        <input id="file" type="file" accept=".pdf"/>
+
         <input type="submit" value="Register">
     </form>
 
@@ -25,4 +28,30 @@
         $('#gform').prepend('Your submission has been processed...');
         });
     </script>
+    <br><br>
+    <form action="https://script.google.com/macros/s/AKfycbz2YFECZJksql0UGt0rsWtLyCAyyKQZfM5E2oDKO1V4cERW2OuiO1mAhBxq0cmhtyGn/exec" id="form" method="post">
+        Upload a file
+        <div id="data"></div>
+        <input name="file" id="uploadfile" type="file">
+        <input id="submit" type="submit">
+    </form>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.js"></script>
+    <script>
+        $('#uploadfile').on("change", function() {
+            var file = this.files[0];
+            var fr = new FileReader();
+            fr.fileName = file.name;
+            fr.onload = function(e) {
+                e.target.result
+                html = '<input type="hidden" name="data" value="' + e.target.result.replace(/^.*,/, '') + '" >';
+                html += '<input type="hidden" name="mimetype" value="' + e.target.result.match(/^.*(?=;)/)[0] + '" >';
+                html += '<input type="hidden" name="filename" value="' + e.target.fileName + '" >';
+                $("#data").empty().append(html);
+            }
+            fr.readAsDataURL(file);
+        });
+    </script>
+
 </body> 
+
+<!--https://www.dropbox.com/request/Z43UfG0EwLDppO6lg1Cu-->
