--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <input type="submit" value="Register">
     </form>
 
-    <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
-
     <script src="assets/js/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.js"></script>
+
     <script type="text/javascript">var submitted=false;</script>
     <script type="text/javascript">
     $('#gform').on('submit', function(e) {
@@ -29,13 +29,13 @@
         });
     </script>
     <br><br>
-    <form action="https://script.google.com/macros/s/AKfycbz2YFECZJksql0UGt0rsWtLyCAyyKQZfM5E2oDKO1V4cERW2OuiO1mAhBxq0cmhtyGn/exec" id="form" method="post">
+    <form action="https://script.google.com/macros/s/AKfycbz2YFECZJksql0UGt0rsWtLyCAyyKQZfM5E2oDKO1V4cERW2OuiO1mAhBxq0cmhtyGn/exec" id="form" method="post" target="hidden_iframe">
         Upload a file
         <div id="data"></div>
         <input name="file" id="uploadfile" type="file">
         <input id="submit" type="submit">
     </form>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.js"></script>
+    
     <script>
         $('#uploadfile').on("change", function() {
             var file = this.files[0];
@@ -51,6 +51,8 @@
             fr.readAsDataURL(file);
         });
     </script>
+
+    <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
 
 </body> 
 
