--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
     <h2>Time Crystals 2025 <br>Registration Form!!</h2>
+
     <form name="gform" id="gform" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLSfNVbCGCUImTxlBhti-AgdKd8QISTlqjuNzTBtljHDSB1FSAA/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
         <label for="First name">Name:</label><br>
         <input type="text" id="entry.1781870168" name="entry.1781870168" required><br><br>
@@ -12,14 +13,21 @@
         <label for="email">Email:</label><br>
         <input type="email" id="entry.1241471767" name="entry.1241471767" required><br><br>
 
-        <label for="file">Abstract</label>
-        <input id="file" type="file" accept=".pdf"/>
+        <input type="submit" value="Register" class="hidden">
+    </form>
 
-        <input type="submit" value="Register">
+    <form action="https://script.google.com/macros/s/AKfycbz2YFECZJksql0UGt0rsWtLyCAyyKQZfM5E2oDKO1V4cERW2OuiO1mAhBxq0cmhtyGn/exec" id="form" method="post" target="hidden_iframe">
+        <label for="file">Abstract</label><br>
+        <!--<input id="file" type="file" accept=".pdf"/><br><br>-->
+        <div id="data"></div>
+        <input name="file" id="uploadfile" type="file">
+        <input id="submit" type="submit" value="Register">
     </form>
 
     <script src="assets/js/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.js"></script>
+
+    <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
 
     <script type="text/javascript">var submitted=false;</script>
     <script type="text/javascript">
@@ -29,12 +37,6 @@
         });
     </script>
     <br><br>
-    <form action="https://script.google.com/macros/s/AKfycbz2YFECZJksql0UGt0rsWtLyCAyyKQZfM5E2oDKO1V4cERW2OuiO1mAhBxq0cmhtyGn/exec" id="form" method="post" target="hidden_iframe">
-        Upload a file
-        <div id="data"></div>
-        <input name="file" id="uploadfile" type="file">
-        <input id="submit" type="submit">
-    </form>
     
     <script>
         $('#uploadfile').on("change", function() {
@@ -52,7 +54,7 @@
         });
     </script>
 
-    <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
+    
 
 </body> 
 
