--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <label for="file">Abstract</label><br>
         <!--<input id="file" type="file" accept=".pdf"/><br><br>-->
         <div id="data"></div>
-        <input name="file" id="uploadfile" type="file">
-        <!--<input id="submit" type="submit" value="Register">-->
+        <input name="file" id="uploadfile" type="file"><br><br>
+        <input id="submit" type="submit" value="Register">
     </form>
 
     <input type="button" value="Register" onclick="submitForms()" />
@@ -63,3 +63,5 @@
     </script>
 
 </body> 
+
+<!--https://www.dropbox.com/request/Z43UfG0EwLDppO6lg1Cu-->
