--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!--<input id="file" type="file" accept=".pdf"/><br><br>-->
         <div id="data"></div>
         <input name="file" id="uploadfile" type="file"><br><br>
-        <input id="submit" type="submit" value="Register">
+        <!--<input id="submit" type="submit" value="Register">-->
     </form>
 
     <input type="button" value="Register" onclick="submitForms()" />
