--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!--<input type="submit" value="Register" class="hidden">-->
     </form>
     
-    <form action="https://script.google.com/macros/s/AKfycbz2YFECZJksql0UGt0rsWtLyCAyyKQZfM5E2oDKO1V4cERW2OuiO1mAhBxq0cmhtyGn/exec" id="form" method="post" target="hidden_iframe2">
+    <form action="https://script.google.com/macros/s/AKfycbz2YFECZJksql0UGt0rsWtLyCAyyKQZfM5E2oDKO1V4cERW2OuiO1mAhBxq0cmhtyGn/exec" id="form" method="post">
         <label for="file">Abstract</label><br>
         <!--<input id="file" type="file" accept=".pdf"/><br><br>-->
         <div id="data"></div>
@@ -29,7 +29,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.js"></script>
 
     <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
-    <iframe name="hidden_iframe" id="hidden_iframe2" style="display:none;" onload="if(submitted) {}"></iframe>
 
     <script>
     submitForms = function(){
