--- a/index.html
+++ b/index.html
@@ -46,15 +46,10 @@
     }
     </script>
 
-    <script type="text/javascript">
+    <!--<script type="text/javascript">
     var submitted=false;
     $('#gform').on('submit');
-    </script>
-    
-    <!--, function(e) {
-        $('#gform *').fadeOut(2000);
-        $('#gform').prepend('Your submission has been processed...');
-        -->
+    </script>-->
 
     <script>
         $('#uploadfile').on("change", function() {
