--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <input type="text" id="entry.714867638" name="entry.714867638" required><br><br>
     </form>
     
-    <form action="https://script.google.com/macros/s/AKfycbz2YFECZJksql0UGt0rsWtLyCAyyKQZfM5E2oDKO1V4cERW2OuiO1mAhBxq0cmhtyGn/exec" id="form" method="post">
+    <form action="https://script.google.com/macros/s/AKfycbz2YFECZJksql0UGt0rsWtLyCAyyKQZfM5E2oDKO1V4cERW2OuiO1mAhBxq0cmhtyGn/exec" id="dform" method="post">
         <label for="file">Abstract</label><br>
         <div id="data"></div>
         <input name="file" id="uploadfile" type="file" accept=".pdf" required><br><br>
@@ -41,8 +41,9 @@
 
     <script>
     submitForms = function(){
-        document.getElementById("gform").submit();
-        document.getElementById("form").submit();
+        var submitted=false;
+        $('#gform').on('submit');
+        document.getElementById("dform").submit();
     }
     </script>
 
