--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
     <input type="button" value="Register" onclick="submitForms()" />
 
     <script src="assets/js/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.js"></script>
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.js"></script>-->
 
     <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
 
     <script>
     submitForms = function(){
         var submitted=false;
-        $('#gform').on('submit');
+        document.getElementById("gform").submit();
         document.getElementById("dform").submit();
     }
     </script>
