--- a/index.html
+++ b/index.html
@@ -41,16 +41,15 @@
 
     <script>
     submitForms = function(){
-        var submitted=false;
         document.getElementById("gform").submit();
         document.getElementById("dform").submit();
     }
     </script>
 
-    <!--<script type="text/javascript">
+    <script type="text/javascript">
     var submitted=false;
     $('#gform').on('submit');
-    </script>-->
+    </script>
 
     <script>
         $('#uploadfile').on("change", function() {
