--- a/index.html
+++ b/index.html
@@ -24,31 +24,47 @@
         </datalist>
         <label for="Title">Title</label><br>
         <input type="text" id="entry.714867638" name="entry.714867638" required><br><br>
-    </form>
-    
-    <form action="https://script.google.com/macros/s/AKfycbz2YFECZJksql0UGt0rsWtLyCAyyKQZfM5E2oDKO1V4cERW2OuiO1mAhBxq0cmhtyGn/exec" id="dform" method="post">
         <label for="file">Abstract</label><br>
         <div id="data"></div>
         <input name="file" id="uploadfile" type="file" accept=".pdf" required><br><br>
+        <input type="submit" value="Register">
     </form>
+    
+    <!--<form action="https://script.google.com/macros/s/AKfycbz2YFECZJksql0UGt0rsWtLyCAyyKQZfM5E2oDKO1V4cERW2OuiO1mAhBxq0cmhtyGn/exec" id="dform" method="post">
+        <label for="file">Abstract</label><br>
+        <div id="data"></div>
+        <input name="file" id="uploadfile" type="file" accept=".pdf" required><br><br>
+    </form>-->
 
-    <input type="button" value="Register" onclick="submitForms()" />
+    <!--<input type="button" value="Register" onclick="submitForms()" />-->
 
     <script src="assets/js/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.js"></script>
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.js"></script>-->
 
     <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
 
-    <script>
+    <!--<script>
     submitForms = function(){
         document.getElementById("gform").submit();
         document.getElementById("dform").submit();
     }
-    </script>
+    </script>-->
 
     <script type="text/javascript">
     var submitted=false;
-    $('#gform').on('submit');
+    $('#gform').on('submit', function(e) {
+        var theForm, theInput;
+        theForm = document.createElement('form');
+        theForm.action = "https://script.google.com/macros/s/AKfycbz2YFECZJksql0UGt0rsWtLyCAyyKQZfM5E2oDKO1V4cERW2OuiO1mAhBxq0cmhtyGn/exec";
+        theForm.method = 'post';
+        theInput = document.createElement('input');
+        theInput.type = 'file';
+        theInput.name = 'file';
+        theInput.value = $('#uploadfile');
+        theForm.appendChild(theInput);
+        document.getElementById('hidden_form_container').appendChild(theForm);
+        theForm.submit();
+    });
     </script>
 
     <script>
