--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Registration Form</title>
 </head>
 <body>
-    <h2>Time Crystals 2025 <br>Registration Form</h2>
+    <h2>Time Crystals 2025 <br>Registration Form..</h2>
     <form name="gform" id="gform" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLSfNVbCGCUImTxlBhti-AgdKd8QISTlqjuNzTBtljHDSB1FSAA/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
         <label for="First name">First Name:</label><br>
         <input type="text" id="entry.1781870168" name="entry.1781870168" required><br><br>
@@ -50,8 +50,9 @@
     }
     </script>-->
 
-    <script type="text/javascript">
-    var submitted=false;
+    <script type="text/javascript"> var submitted=false; </script>
+    
+    <!--<script>
     $('#gform').on('submit', function(e) {
         var theForm, theInput;
         theForm = document.createElement('form');
@@ -65,7 +66,7 @@
         document.getElementById('hidden_form_container').appendChild(theForm);
         theForm.submit();
     });
-    </script>
+    </script>-->
 
     <script>
         $('#uploadfile').on("change", function() {
