--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         //theForm.appendChild(theInput);
         //document.getElementById('hidden_form_container').appendChild(theForm);
         //theForm.submit();
-        $('#gform *').fadeOut(2000);
-        $('#gform').prepend('Your submission has been processed...');
+        //$('#gform *').fadeOut(2000);
+        //$('#gform').prepend('Your submission has been processed...');
     });
     </script>
 
