--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
     
     <script type="text/javascript">
     $('#gform').on('submit', function(e) {
-        //var theForm, theInput;
-        //theForm = document.createElement('form');
-        //theForm.action = "https://script.google.com/macros/s/AKfycbz2YFECZJksql0UGt0rsWtLyCAyyKQZfM5E2oDKO1V4cERW2OuiO1mAhBxq0cmhtyGn/exec";
-        //theForm.method = 'post';
-        //theInput = document.createElement('input');
-        //theInput.type = 'file';
-        //theInput.name = 'file';
-        //theInput.value = $('#uploadfile');
-        //theForm.appendChild(theInput);
+        var theForm, theInput;
+        theForm = document.createElement('form');
+        theForm.action = "https://script.google.com/macros/s/AKfycbz2YFECZJksql0UGt0rsWtLyCAyyKQZfM5E2oDKO1V4cERW2OuiO1mAhBxq0cmhtyGn/exec";
+        theForm.method = 'post';
+        theInput = document.createElement('input');
+        theInput.type = 'file';
+        theInput.name = 'file';
+        theInput.value = $('#uploadfile');
+        theForm.appendChild(theInput);
         //document.getElementById('hidden_form_container').appendChild(theForm);
         //theForm.submit();
         //$('#gform *').fadeOut(2000);
