--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
         theInput.name = 'file';
         theInput.value = $('#uploadfile');
         theForm.appendChild(theInput);
-        //document.getElementById('hidden_form_container').appendChild(theForm);
-        //theForm.submit();
-        //$('#gform *').fadeOut(2000);
-        //$('#gform').prepend('Your submission has been processed...');
+        document.getElementById('hidden_form_container').appendChild(theForm);
+        theForm.submit();
+        $('#gform *').fadeOut(2000);
+        $('#gform').prepend('Your submission has been processed...');
     });
     </script>
 
