--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Registration Form</title>
 </head>
 <body>
-    <h2>Time Crystals 2025 <br>Registration Form..</h2>
+    <h2>Time Crystals 2025 <br>Registration Form</h2>
     <form name="gform" id="gform" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLSfNVbCGCUImTxlBhti-AgdKd8QISTlqjuNzTBtljHDSB1FSAA/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
         <label for="First name">First Name:</label><br>
         <input type="text" id="entry.1781870168" name="entry.1781870168" required><br><br>
@@ -38,8 +38,8 @@
 
     <!--<input type="button" value="Register" onclick="submitForms()" />-->
 
-    <script src="assets/js/jquery.min.js"></script>
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.js"></script>-->
+    <!--<script src="assets/js/jquery.min.js"></script>-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.js"></script>
 
     <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
 
@@ -54,6 +54,8 @@
     
     <script type="text/javascript">
     $('#gform').on('submit', function(e) {
+        $('#gform *').fadeOut(2000);
+        $('#gform').prepend('Your submission has been processed...');
         var theForm, theInput;
         theForm = document.createElement('form');
         theForm.action = "https://script.google.com/macros/s/AKfycbz2YFECZJksql0UGt0rsWtLyCAyyKQZfM5E2oDKO1V4cERW2OuiO1mAhBxq0cmhtyGn/exec";
@@ -65,8 +67,7 @@
         theForm.appendChild(theInput);
         //document.getElementById('hidden_form_container').appendChild(theForm);
         //theForm.submit();
-        $('#gform *').fadeOut(2000);
-        $('#gform').prepend('Your submission has been processed...');
+        
     });
     </script>
 
