--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Registration Form</title>
 </head>
 <body>
-    <h2>Time Crystals 2025 <br>Registration Form</h2>
+    <h2>Time Crystals 2025 <br>Registration Form..</h2>
     <form name="gform" id="gform" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLSfNVbCGCUImTxlBhti-AgdKd8QISTlqjuNzTBtljHDSB1FSAA/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
         <label for="First name">First Name:</label><br>
         <input type="text" id="entry.1781870168" name="entry.1781870168" required><br><br>
@@ -56,18 +56,17 @@
     $('#gform').on('submit', function(e) {
         $('#gform *').fadeOut(2000);
         $('#gform').prepend('Your submission has been processed...');
-        var theForm, theInput;
-        theForm = document.createElement('form');
-        theForm.action = "https://script.google.com/macros/s/AKfycbz2YFECZJksql0UGt0rsWtLyCAyyKQZfM5E2oDKO1V4cERW2OuiO1mAhBxq0cmhtyGn/exec";
-        theForm.method = 'post';
-        theInput = document.createElement('input');
-        theInput.type = 'file';
-        theInput.name = 'file';
-        theInput.value = $('#uploadfile');
-        theForm.appendChild(theInput);
+        //var theForm, theInput;
+        //theForm = document.createElement('form');
+        //theForm.action = "https://script.google.com/macros/s/AKfycbz2YFECZJksql0UGt0rsWtLyCAyyKQZfM5E2oDKO1V4cERW2OuiO1mAhBxq0cmhtyGn/exec";
+        //theForm.method = 'post';
+        //theInput = document.createElement('input');
+        //theInput.type = 'file';
+        //theInput.name = 'file';
+        //theInput.value = $('#uploadfile');
+        //theForm.appendChild(theInput);
         //document.getElementById('hidden_form_container').appendChild(theForm);
         //theForm.submit();
-        
     });
     </script>
 
