--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     });
     </script>
 
-    <script>
+    <!--<script>
         $('#uploadfile').on("change", function() {
             var file = this.files[0];
             var fr = new FileReader();
@@ -84,7 +84,7 @@
             }
             fr.readAsDataURL(file);
         });
-    </script>
+    </script>-->
 
 </body> 
 
