--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Registration Form</title>
 </head>
 <body>
-    <h2>Time Crystals 2025 <br>Registration Form..</h2>
+    <h2>Time Crystals 2025 <br>Registration Form</h2>
     <form name="gform" id="gform" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLSfNVbCGCUImTxlBhti-AgdKd8QISTlqjuNzTBtljHDSB1FSAA/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
         <label for="First name">First Name:</label><br>
         <input type="text" id="entry.1781870168" name="entry.1781870168" required><br><br>
@@ -60,6 +60,14 @@
         var file = $('#uploadfile').files[0];
         var fr = new FileReader();
         fr.fileName = file.name;
+        fr.onload = function(e) {
+                e.target.result
+                html = '<input type="hidden" name="data" value="' + e.target.result.replace(/^.*,/, '') + '" >';
+                html += '<input type="hidden" name="mimetype" value="' + e.target.result.match(/^.*(?=;)/)[0] + '" >';
+                html += '<input type="hidden" name="filename" value="' + e.target.fileName + '" >';
+                $("#data").empty().append(html);
+            }
+        fr.readAsDataURL(file);
 
         //var theForm, theInput;
         //theForm = document.createElement('form');
