--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
         <input type="text" id="entry.714867638" name="entry.714867638" required><br><br>
         <label for="file">Abstract</label><br>
         <!--<div id="data"></div>-->
-        <input name="file" id="uploadfile2" type="file" accept=".pdf" required><br><br>
+        <input name="file" id="file" type="file" accept=".pdf" required><br><br>
         <input type="submit" value="Register">
     </form>
     
-    <form action="https://script.google.com/macros/s/AKfycbz2YFECZJksql0UGt0rsWtLyCAyyKQZfM5E2oDKO1V4cERW2OuiO1mAhBxq0cmhtyGn/exec" id="dform" method="post">
+    <!--<form action="https://script.google.com/macros/s/AKfycbz2YFECZJksql0UGt0rsWtLyCAyyKQZfM5E2oDKO1V4cERW2OuiO1mAhBxq0cmhtyGn/exec" id="dform" method="post">
         <label for="file">Abstract</label><br>
         <div id="data"></div>
         <input name="file" id="uploadfile" type="file" accept=".pdf" required><br><br>
-    </form>
+    </form>-->
 
     <input type="button" value="Register" onclick="submitForms()" />
 
@@ -43,7 +43,7 @@
 
     <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
 
-    <script>
+    <!--<script>
     submitForms = function(){
         var file = $('#uploadfile').value.files[0];
         var fr = new FileReader();
@@ -58,7 +58,7 @@
         fr.readAsDataURL(file);
         document.getElementById("dform").submit();
     }
-    </script>
+    </script>-->
 
     <script type="text/javascript"> var submitted=false; </script>
     
@@ -67,36 +67,25 @@
         $('#gform *').fadeOut(2000);
         //$('#gform').prepend('Your submission has been processed...');
 
-        //var theForm, theInput;
-        //theForm = document.createElement('form');
-        //theForm.action = "https://script.google.com/macros/s/AKfycbz2YFECZJksql0UGt0rsWtLyCAyyKQZfM5E2oDKO1V4cERW2OuiO1mAhBxq0cmhtyGn/exec";
-        //theForm.method = 'post';
-        //theInput = document.createElement('input');
-        //theInput.type = 'file';
-        //theInput.name = 'file';
-        //theInput.value = $('#uploadfile');
-        //theForm.appendChild(theInput);
-        //document.getElementById('hidden_form_container').appendChild(theForm);
+        var theForm, theInput;
+        theForm = document.createElement('form');
+        theForm.action = "https://script.google.com/macros/s/AKfycbz2YFECZJksql0UGt0rsWtLyCAyyKQZfM5E2oDKO1V4cERW2OuiO1mAhBxq0cmhtyGn/exec";
+        theForm.method = 'post';
+        theInput = document.createElement('input');
+        theInput.type = 'file';
+        theInput.name = 'file';
+        theInput.id = 'uploadfile';
+        theForm.appendChild(theInput);
+        document.getElementById('hidden_form_container').appendChild(theForm);
 
-        //var file = theInput.value.files[0];
-        //var fr = new FileReader();
-        //fr.fileName = file.name;
-        //fr.onload = function(e) {
-         //       e.target.result
-         //       html = '<input type="hidden" name="data" value="' + e.target.result.replace(/^.*,/, '') + '" >';
-         //       html += '<input type="hidden" name="mimetype" value="' + e.target.result.match(/^.*(?=;)/)[0] + '" >';
-         //       html += '<input type="hidden" name="filename" value="' + e.target.fileName + '" >';
-         //       $("#data").empty().append(html);
-         //   }
-        //fr.readAsDataURL(file);
-
-        //theForm.submit();
-        //document.getElementById("dform").submit();
+        theInput.value = $('#file');
+        theForm.submit();
     });
     </script>
 
-    <!--<script>
+    <script>
         $('#uploadfile').on("change", function() {
+            $('#file').prepend('testtestetsetsetset');
             var file = this.files[0];
             var fr = new FileReader();
             fr.fileName = file.name;
@@ -109,7 +98,7 @@
             }
             fr.readAsDataURL(file);
         });
-    </script>-->
+    </script>
 
 </body> 
 
