--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Registration Form</title>
 </head>
 <body>
-    <h2>Time Crystals 2025 <br>Registration Form</h2>
+    <h2>Time Crystals 2025 <br>Registration Form..</h2>
     <form name="gform" id="gform" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLSfNVbCGCUImTxlBhti-AgdKd8QISTlqjuNzTBtljHDSB1FSAA/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
         <label for="First name">First Name:</label><br>
         <input type="text" id="entry.1781870168" name="entry.1781870168" required><br><br>
@@ -24,64 +24,28 @@
         </datalist>
         <label for="Title">Title</label><br>
         <input type="text" id="entry.714867638" name="entry.714867638" required><br><br>
-        <label for="file">Abstract</label><br>
-        <!--<div id="data"></div>-->
-        <input name="file" id="file" type="file" accept=".pdf" required><br><br>
-        <input type="submit" value="Register">
     </form>
     
-    <!--<form action="https://script.google.com/macros/s/AKfycbz2YFECZJksql0UGt0rsWtLyCAyyKQZfM5E2oDKO1V4cERW2OuiO1mAhBxq0cmhtyGn/exec" id="dform" method="post">
+    <form action="https://script.google.com/macros/s/AKfycbz2YFECZJksql0UGt0rsWtLyCAyyKQZfM5E2oDKO1V4cERW2OuiO1mAhBxq0cmhtyGn/exec" id="dform" method="post">
         <label for="file">Abstract</label><br>
         <div id="data"></div>
         <input name="file" id="uploadfile" type="file" accept=".pdf" required><br><br>
-    </form>-->
+    </form>
 
     <input type="button" value="Register" onclick="submitForms()" />
 
-    <!--<script src="assets/js/jquery.min.js"></script>-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.js"></script>
 
     <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
 
-    <!--<script>
+    <script>
     submitForms = function(){
-        var file = $('#uploadfile').value.files[0];
-        var fr = new FileReader();
-        fr.fileName = file.name;
-        fr.onload = function(e) {
-                e.target.result
-                html = '<input type="hidden" name="data" value="' + e.target.result.replace(/^.*,/, '') + '" >';
-                html += '<input type="hidden" name="mimetype" value="' + e.target.result.match(/^.*(?=;)/)[0] + '" >';
-                html += '<input type="hidden" name="filename" value="' + e.target.fileName + '" >';
-               $("#data").empty().append(html);
-            }
-        fr.readAsDataURL(file);
+        document.getElementById("gform").submit();
         document.getElementById("dform").submit();
     }
-    </script>-->
+    </script>
 
     <script type="text/javascript"> var submitted=false; </script>
-    
-    <script type="text/javascript">
-    $('#gform').on('submit', function(e) {
-        $('#gform *').fadeOut(2000);
-        //$('#gform').prepend('Your submission has been processed...');
-
-        var theForm, theInput;
-        theForm = document.createElement('form');
-        theForm.action = "https://script.google.com/macros/s/AKfycbz2YFECZJksql0UGt0rsWtLyCAyyKQZfM5E2oDKO1V4cERW2OuiO1mAhBxq0cmhtyGn/exec";
-        theForm.method = 'post';
-        theInput = document.createElement('input');
-        theInput.type = 'file';
-        theInput.name = 'file';
-        theInput.id = 'uploadfile';
-        theForm.appendChild(theInput);
-        document.getElementById('hidden_form_container').appendChild(theForm);
-
-        theInput.value = $('#file');
-        theForm.submit();
-    });
-    </script>
 
     <script>
         $('#uploadfile').on("change", function() {
@@ -101,5 +65,3 @@
     </script>
 
 </body> 
-
-<!--https://www.dropbox.com/request/Z43UfG0EwLDppO6lg1Cu-->
