--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h2>Time Crystals 2025 <br>Registration Form</h2>
-    <form name="gform" id="gform" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLSfNVbCGCUImTxlBhti-AgdKd8QISTlqjuNzTBtljHDSB1FSAA/formResponse?" target="hidden_iframe" onsubmit="submitted=true; event.preventDefault(); validateMyForm();">
+    <form name="gform" id="gform" method="post" action="https://docs.google.com/forms/d/e/1FAIpQLSfNVbCGCUImTxlBhti-AgdKd8QISTlqjuNzTBtljHDSB1FSAA/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
         <label for="First name">First Name:</label><br>
         <input type="text" id="entry.1781870168" name="entry.1781870168" required><br><br>
         <label for="Family name">Family Name:</label><br>
