--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
     </form>
     
     <form action="https://script.google.com/macros/s/AKfycbz2YFECZJksql0UGt0rsWtLyCAyyKQZfM5E2oDKO1V4cERW2OuiO1mAhBxq0cmhtyGn/exec" id="dform" method="post">
+        <label for="Test">Test:</label><br>
+        <input type="text" id="test" name="test" required><br><br>
         <label for="file">Abstract</label><br>
-        <div id="data"></div>
+        <!--<div id="data"></div>-->
         <input name="file" id="uploadfile" type="file" accept=".pdf" required><br><br>
     </form>
 
