--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
 
     <script>
     submitForms = function(){
-        $('#gform').submit();
-        $('#dform').submit();
+        document.getElementById("gform").submit();
+
+        document.getElementById("dform").submit();
     }
     </script>
 
