--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
     <form action="https://script.google.com/macros/s/AKfycbz2YFECZJksql0UGt0rsWtLyCAyyKQZfM5E2oDKO1V4cERW2OuiO1mAhBxq0cmhtyGn/exec" id="dform" method="post">
         <label for="file">Abstract</label><br>
-        <!--<div id="data"></div>-->
+        <div id="data"></div>
         <input name="file" id="uploadfile" type="file" accept=".pdf" required><br><br>
     </form>
 
@@ -41,7 +41,6 @@
     <script>
     submitForms = function(){
         document.getElementById("gform").submit();
-
         document.getElementById("dform").submit();
     }
     </script>
