--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 html = '<input type="hidden" name="data" value="' + e.target.result.replace(/^.*,/, '') + '" >';
                 html += '<input type="hidden" name="mimetype" value="' + e.target.result.match(/^.*(?=;)/)[0] + '" >';
                 html += '<input type="hidden" name="filename" value="' + e.target.fileName + '" >';
-                //$("#data").empty().append(html);
+                $("#data").empty().append(html);
             }
             fr.readAsDataURL(file);
         });
