--- a/index.html
+++ b/index.html
@@ -19,21 +19,17 @@
         <label for="Contribution">Contribution:</label><br>
         <input list="contributions" id="entry.1206372013" name="entry.1206372013" required><br><br>
         <datalist id="contributions">
-            <select onchange="$('#entry.1206372013').val(this.value)">
             <option value="Poster">
             <option value="Talk">
-            </select>
         </datalist>
         <label for="Title">Title</label><br>
         <input type="text" id="entry.714867638" name="entry.714867638" required><br><br>
         <label for="file">Abstract</label><br>
         <input name="file" id="uploadfile" type="file" accept=".pdf" required><br><br>
-        <input list="payment" id="something" name="something" required><br><br>
+        <input list="payment" id="entry.234021023" name="entry.234021023" required><br><br>
         <datalist id="patments">
-            <select onchange="$('#something').val(this.value)">
             <option value="Regular">
             <option value="Student">
-            </select>
         </datalist>
     </form>
     
