--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
         <input type="text" id="entry.714867638" name="entry.714867638" required><br><br>
         <label for="file">Abstract</label><br>
         <input name="file" id="uploadfile" type="file" accept=".pdf" required><br><br>
-        <input list="payment" id="entry.234021023" name="entry.234021023" required><br><br>
-        <datalist id="patments">
+        <label for="Registration Fee">Registration Fee:</label><br>
+        <input list="Registration Fee" id="entry.234021023" name="entry.234021023" required><br><br>
+        <datalist id="Registration Fee">
             <option value="Regular">
             <option value="Student">
         </datalist>
